# cmd/sample/internal/handler/entitygrp/user/v1/swagger.go
@@ -3,7 +3,10 @@
 // The purpose of this file is to define the swagger documentation for the API.
 package user
 
-import "github.com/iamsumit/sample-go-app/pkg/api"
+import (
+	"github.com/iamsumit/sample-go-app/pkg/api"
+	"github.com/iamsumit/sample-go-app/pkg/db"
+)
 
 // -------------------------------------------------------------------
 // Swagger Parameters
@@ -32,6 +35,19 @@ type _ struct {
 	// required: true
 	// type: integer
 	ID int `json:"id"`
+}
+
+// The parameters are applied to the list user route.
+//
+// GET /v1/users
+
+// swagger:parameters listUsers
+type _ struct {
+	// The pagination to apply to the list users.
+	//
+	// in: query
+	// required: false
+	db.Pagination `json:"page"`
 }
 
 // -------------------------------------------------------------------
@@ -83,6 +99,30 @@ type _ struct {
 }
 
 // Swagger response is used in various user routes for a failed response
+// because of 400.
+//
+// GET /v1/user/{id}
+// POST /v1/user
+
+// swagger:response userResponse400
+type _ struct {
+	// in:body
+	Body struct {
+		// Success
+		//
+		// example: false
+		Success bool `json:"success"`
+		// Timestamp
+		//
+		// example: 1639237536
+		Timestamp int64 `json:"timestamp"`
+		// Data
+		// in: body
+		Errors api.ErrorResponse `json:"errors"`
+	}
+}
+
+// Swagger response is used in various user routes for a failed response
 // because of 404.
 //
 // GET /v1/user/{id}
@@ -112,30 +152,6 @@ type _ struct {
 // GET /v1/user/{id}
 // POST /v1/user
 
-// swagger:response userResponse400
-type _ struct {
-	// in:body
-	Body struct {
-		// Success
-		//
-		// example: false
-		Success bool `json:"success"`
-		// Timestamp
-		//
-		// example: 1639237536
-		Timestamp int64 `json:"timestamp"`
-		// Data
-		// in: body
-		Errors api.ErrorResponse `json:"errors"`
-	}
-}
-
-// Swagger response is used in various user routes for a failed response
-// because of 400.
-//
-// GET /v1/user/{id}
-// POST /v1/user
-
 // swagger:response userResponse409
 type _ struct {
 	// in:body
@@ -151,6 +167,32 @@ type _ struct {
 		// Data
 		// in: body
 		// example: {"error": "user already exists"}
+		Errors map[string]interface{} `json:"errors"`
+	}
+}
+
+// Swagger response is used in various user routes for a failed response
+// because of 500.
+//
+// GET /v1/users
+// GET /v1/user/{id}
+// POST /v1/user
+
+// swagger:response userResponse500
+type _ struct {
+	// in:body
+	Body struct {
+		// Success
+		//
+		// example: false
+		Success bool `json:"success"`
+		// Timestamp
+		//
+		// example: 1639237536
+		Timestamp int64 `json:"timestamp"`
+		// Data
+		// in: body
+		// example: {"error": "some internal error occured"}
 		Errors map[string]interface{} `json:"errors"`
 	}
 }
