# cmd/sample/internal/handler/router/router.go
@@ -95,6 +95,7 @@ func SetV1Routes(a *api.API, cfg Config) {
 	userV1 := userv1.New(cfg.Log, cfg.DB)
 
 	a.Handle(http.MethodGet, "/v1/user/{id}", userV1.ByID)
+	a.Handle(http.MethodGet, "/v1/users", userV1.All)
 	a.Handle(http.MethodPost, "/v1/user", userV1.CreateUser)
 
 	ServeSWGUIDocsRoutes(a, "v1")
